deploy: f3a534cdd8a3ae378cfaed13fdf20acecbed126a

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>API Reference</title>
+    <title>WayBill API Reference</title>
 
     <style>
       .highlight table td { padding: 5px; }
@@ -201,7 +201,7 @@
       <script src="javascripts/all-c5541673.js"></script>
   </head>
 
-  <body class="index" data-languages="[&quot;shell&quot;,&quot;ruby&quot;,&quot;python&quot;,&quot;javascript&quot;]">
+  <body class="index" data-languages="[&quot;javascript&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -211,9 +211,6 @@
     <div class="toc-wrapper">
       <img src="images/logo-1e815a84.png" class="logo" alt="" />
         <div class="lang-selector">
-              <a href="#" data-language-name="shell">shell</a>
-              <a href="#" data-language-name="ruby">ruby</a>
-              <a href="#" data-language-name="python">python</a>
               <a href="#" data-language-name="javascript">javascript</a>
         </div>
         <div class="search">
@@ -222,10 +219,18 @@
         <ul class="search-results"></ul>
       <ul id="toc" class="toc-list-h1">
           <li>
-            <a href="#step-one" class="toc-h1 toc-link" data-title="Step One">Step One</a>
+            <a href="#overview" class="toc-h1 toc-link" data-title="Overview">Overview</a>
           </li>
           <li>
-            <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
+            <a href="#url" class="toc-h1 toc-link" data-title="URL">URL</a>
+          </li>
+          <li>
+            <a href="#parameters" class="toc-h1 toc-link" data-title="Parameters">Parameters</a>
+              <ul class="toc-list-h2">
+                  <li>
+                    <a href="#1-addresses" class="toc-h2 toc-link" data-title="1 Addresses">1 Addresses</a>
+                  </li>
+              </ul>
           </li>
           <li>
             <a href="#authentication" class="toc-h1 toc-link" data-title="Authentication">Authentication</a>
@@ -250,18 +255,60 @@
       </ul>
         <ul class="toc-footer">
             <li><a href='#'>Sign Up for a Developer Key</a></li>
+            <li><a href='https://github.com/acme'>Client libraries</a></li>
             <li><a href='https://github.com/slatedocs/slate'>Documentation Powered by Slate</a></li>
         </ul>
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='step-one'>Step One</h1>
-<p>Here is my first paragraph</p>
-<h1 id='introduction'>Introduction</h1>
-<p>Welcome to the BEX API! You can use our API to access Kittn API endpoints, which can get information on various cats, kittens, and breeds in our database.</p>
-
-<p>We have language bindings in Shell, Ruby, Python, and JavaScript! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
+        <h1 id='overview'>Overview</h1>
+<p>This service is used so as to create a waybill shipping entry into the BEX courier database. This
+allows BEX customers to interface directly their shipping requests and helps to eliminate errors as
+a result of manual data capture or misinterpretation of written content on shipping
+documentation.
+The service allows for the communication of a number of The service allows for the communication of a number of shipping options, such as:
+● Full addressing of both the sending and receiving parties
+● Additional shipping references against which the shipping entry is to be tagged against
+● Multiple packages and their associated dimensions and weights
+● Special handling requests such as after-hour deliveries, saturday service or public holidays</p>
+<h1 id='url'>URL</h1>
+<p>Service Relative URL: /api/service/submitwaybillwia</p>
+<h1 id='parameters'>Parameters</h1>
+<p>The parameter requirements for this api call have been broken down into three sub-sections,
+namely:
+1. Addresses
+    This sub-section contains parameters related to the construction of the Waybill and it&#39;s routing information
+2. Dimensioning
+3. Service Add-Ons</p>
+<h2 id='1-addresses'>1 Addresses</h2>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>FieldType</th>
+<th>Required</th>
+<th>Case</th>
+<th>Example</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>Account No</td>
+<td>String</td>
+<td>Yes</td>
+<td>No</td>
+<td>1110123</td>
+<td>Bex account number to which shipment costs will be allocated</td>
+</tr>
+<tr>
+<td>Swndersref</td>
+<td>String</td>
+<td>No</td>
+<td>No</td>
+<td>Order123-456</td>
+<td>Shippers reference linked to the database. This reference can be used for tracking, reporting and invoice requests</td>
+</tr>
+</tbody></table>
 
 <p>This example API documentation page was created with <a href="https://github.com/slatedocs/slate">Slate</a>. Feel free to edit it and use it as a base for your own API&#39;s documentation.</p>
 <h1 id='authentication'>Authentication</h1>
@@ -499,9 +546,6 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
       </div>
       <div class="dark-box">
           <div class="lang-selector">
-                <a href="#" data-language-name="shell">shell</a>
-                <a href="#" data-language-name="ruby">ruby</a>
-                <a href="#" data-language-name="python">python</a>
                 <a href="#" data-language-name="javascript">javascript</a>
           </div>
       </div>
