--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@ allows BEX customers to interface directly their shipping requests and helps to 
 a result of manual data capture or misinterpretation of written content on shipping
 documentation.
 The service allows for the communication of a number of The service allows for the communication of a number of shipping options, such as:
-● Full addressing of both the sending and receiving parties
-● Additional shipping references against which the shipping entry is to be tagged against
-● Multiple packages and their associated dimensions and weights
-● Special handling requests such as after-hour deliveries, saturday service or public holidays</p>
+* Full addressing of both the sending and receiving parties
+* Additional shipping references against which the shipping entry is to be tagged against
+* Multiple packages and their associated dimensions and weights
+* Special handling requests such as after-hour deliveries, saturday service or public holidays</p>
 <h1 id='url'>URL</h1>
-<p>Service Relative URL: /api/service/submitwaybillwia</p>
+<p>Service Relative URL: <code>/api/service/submitwaybillwia</code></p>
 <h1 id='parameters'>Parameters</h1>
 <p>The parameter requirements for this api call have been broken down into three sub-sections,
 namely:
