--- a/index.html
+++ b/index.html
@@ -267,11 +267,14 @@
 allows BEX customers to interface directly their shipping requests and helps to eliminate errors as
 a result of manual data capture or misinterpretation of written content on shipping
 documentation.
-The service allows for the communication of a number of The service allows for the communication of a number of shipping options, such as:
-* Full addressing of both the sending and receiving parties
-* Additional shipping references against which the shipping entry is to be tagged against
-* Multiple packages and their associated dimensions and weights
-* Special handling requests such as after-hour deliveries, saturday service or public holidays</p>
+The service allows for the communication of a number of The service allows for the communication of a number of shipping options, such as:</p>
+
+<ul>
+<li>Full addressing of both the sending and receiving parties</li>
+<li>Additional shipping references against which the shipping entry is to be tagged against</li>
+<li>Multiple packages and their associated dimensions and weights</li>
+<li>Special handling requests such as after-hour deliveries, saturday service or public holidays</li>
+</ul>
 <h1 id='url'>URL</h1>
 <p>Service Relative URL: <code>/api/service/submitwaybillwia</code></p>
 <h1 id='parameters'>Parameters</h1>
