--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='overview'>Overview</h1>
-<p>This service is used so as to create a waybill shipping entry into the BEX courier database. This
+<p>This service is used to create a waybill shipping entry into the BEX courier database. This
 allows BEX customers to interface directly their shipping requests and helps to eliminate errors as
 a result of manual data capture or misinterpretation of written content on shipping
 documentation.
