--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
               </ul>
           </li>
           <li>
+            <a href="#page-2" class="toc-h1 toc-link" data-title="Page 2">Page 2</a>
+          </li>
+          <li>
             <a href="#errors" class="toc-h1 toc-link" data-title="Errors">Errors</a>
           </li>
       </ul>
@@ -487,6 +490,10 @@ Remember — a happy kitten is an authenticated kitten!
 <td>The ID of the kitten to delete</td>
 </tr>
 </tbody></table>
+<h1 id='page-2'>Page 2</h1>
+<p>This is some paragraph text.</p>
+
+<p>Here is a code sample: <code>SELECT TOP (1)</code></p>
 <h1 id='errors'>Errors</h1>
 <aside class="notice">
 This error section is stored in a separate file in <code>includes/_errors.md</code>. Slate allows you to optionally separate out your docs into many files...just save them to the <code>includes</code> folder and add them to the top of your <code>index.md</code>'s frontmatter. Files are included in the order listed.
