deploy: 8afd45e789669cbc6dc723f6ff6975968e170569

--- a/index.html
+++ b/index.html
@@ -327,19 +327,28 @@ a header attribute with the same name.</p>
 cipher will need to be agreed upon and saved against your account for decryption purposes.We are also
 able to supply a .NET example for encryption if needed.</p>
 
-<p>AccountNumber
-Field Type:     STRING
-Required:       No (Unless an encrypted password is used)
-Case Sensitive: No
-Example:        112233</p>
+<p>AccountNumber</p>
+
+<p>Field Type:     STRING</p>
+
+<p>Required:       No (Unless an encrypted password is used)</p>
+
+<p>Case Sensitive: No</p>
+
+<p>Example:        112233</p>
 
 <p>Any valid account number for the user credentials can be used. This field is only required when a
-password is encrypted.
-PartnerID
-Field Type:     INT
-Required:       No (Unless an encrypted password is used)
-Case Sensitive: No
-Example:        123</p>
+password is encrypted.</p>
+
+<p>PartnerID</p>
+
+<p>Field Type:     INT</p>
+
+<p>Required:       No (Unless an encrypted password is used)</p>
+
+<p>Case Sensitive: No</p>
+
+<p>Example:        123</p>
 
 <p>The PartnerID is a unique identifier that can be provided by your administrator. This is required due to
 the multi-company support which BEX has per database. This field is only required when a password is
