deploy: c37edbc37544b58268f32c36bd47fc149e17f991

--- a/index.html
+++ b/index.html
@@ -329,8 +329,9 @@ able to supply a .NET example for encryption if needed.</p>
 
 <p>AccountNumber</p>
 
-<p>Field Type: | STRING
-Required:  |No (Unless an encrypted password is used)
+<p>--------------- | -----------------------------------------
+Field Type: | STRING
+Required: | No (Unless an encrypted password is used)
 Case Sensitive: | No
 Example: | 112233</p>
 
@@ -339,7 +340,8 @@ password is encrypted.</p>
 
 <p>PartnerID</p>
 
-<p>Field Type: | INT
+<p>--------------- | -----------------------------------------
+Field Type: | INT
 Required: | No (Unless an encrypted password is used)
 Case Sensitive: | No
 Example: | 123</p>
