deploy: 87876c1711cc01e022f15268ea15fdeea46bc67a

--- a/index.html
+++ b/index.html
@@ -1054,8 +1054,9 @@ You can use those formatting rules in tables, paragraphs, lists, wherever, altho
 <li>2. Is</li>
 <li>3. An</li>
 <li>4. Ordered</li>
+<li>5. List</li>
 <li><ol>
-<li>List</li>
+<li>Point 6</li>
 </ol></li>
 <li><p>This</p></li>
 <li><p>Is</p></li>
@@ -1102,9 +1103,13 @@ You can add little highlighted warnings and notes with just a little HTML embedd
     You must replace meowmeowmeow with your personal API key.
 </aside>
 
+<p>AccId
+    Required
+    Integer</p>
+
 <ul>
-<li><p>AccId    Required    Integer</p></li>
-<li><p>Address   # Required</p></li>
+<li>Address 
+# Required</li>
 </ul>
 
 <blockquote>
@@ -1138,7 +1143,23 @@ created for the shipping of the goods will carry an insurance surcharge that cov
 payable so as to have insurance cover during the shipping of the goods</p>
 </blockquote>
 
-<p>InsuranceRequired | BOOLEAN | No | No | TRUE</p>
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>FieldType</th>
+<th>Required</th>
+<th>Case</th>
+<th>Example</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>InsuranceRequired</td>
+<td>BOOLEAN</td>
+<td>No</td>
+<td>No</td>
+<td>TRUE</td>
+</tr>
+</tbody></table>
 <h1 id='errors'>Errors</h1>
 <aside class="notice">
 This error section is stored in a separate file in <code>includes/_errors.md</code>. Slate allows you to optionally separate out your docs into many files...just save them to the <code>includes</code> folder and add them to the top of your <code>index.md</code>'s frontmatter. Files are included in the order listed.
