deploy: ce16e70ed7bac8153549ee5759f97fb9715480bf

--- a/index.html
+++ b/index.html
@@ -1257,11 +1257,29 @@ payable so as to have insurance cover during the shipping of the goods</p>
 </tr>
 </thead><tbody>
 <tr>
-<td>ReceiverEmail</td>
+<td>ReceiverTelephone</td>
 <td>String</td>
 <td>No</td>
 <td>No</td>
-<td>DEREK@BOEING.COM</td>
+<td>0114523454</td>
+</tr>
+</tbody></table>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>FieldType</th>
+<th>Required</th>
+<th>Case</th>
+<th>Example</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>ReceiverMobile</td>
+<td>String</td>
+<td>No</td>
+<td>No</td>
+<td>0823241234</td>
 </tr>
 </tbody></table>
 
