deploy: fd378e2f2746d4f4c30a6fc361588d334ab1a9ed

--- a/index.html
+++ b/index.html
@@ -1232,6 +1232,16 @@ information is beneficial as the receiver will receive status updates as to the 
 whilst they are being routed through the BEX network.
 </aside></p>
 
+<p></aside class="sucess">
+    The mobile number of the contact person who is to receive the goods at delivery time. This
+information is beneficial as the receiver will receive status updates as to the progress of the goods
+whilst they are being routed through the BEX network.
+</aside></p>
+
+<p></aside class="sucess">
+    The mobile number of the contact person .
+</aside></p>
+
 <blockquote>
 <p>The mobile number of the contact person who is to receive the goods at delivery time. This
 information is beneficial as the receiver will receive status updates as to the progress of the goods
