--- a/index.html
+++ b/index.html
@@ -1226,21 +1226,26 @@ whilst they are being routed through the BEX network</p>
 </tr>
 </tbody></table>
 
-<p></aside class="notice">
+<aside class="notice">
     The mobile number of the contact person who is to receive the goods at delivery time. This
 information is beneficial as the receiver will receive status updates as to the progress of the goods
 whilst they are being routed through the BEX network.
-</aside></p>
+<aside>
 
-<p></aside class="sucess">
+
+<aside class="sucess">
     The mobile number of the contact person who is to receive the goods at delivery time. This
 information is beneficial as the receiver will receive status updates as to the progress of the goods
 whilst they are being routed through the BEX network.
-</aside></p>
+</aside>
 
-<p></aside class="sucess">
+<aside class="sucess">
     The mobile number of the contact person .
-</aside></p>
+</aside>
+
+<aside class="warning">
+    You must replace meowmeowmeow with your personal API key.
+</aside>
 
 <blockquote>
 <p>The mobile number of the contact person who is to receive the goods at delivery time. This
