--- a/index.html
+++ b/index.html
@@ -1230,8 +1230,7 @@ whilst they are being routed through the BEX network</p>
     The mobile number of the contact person who is to receive the goods at delivery time. This
 information is beneficial as the receiver will receive status updates as to the progress of the goods
 whilst they are being routed through the BEX network.
-<aside>
-
+</aside>
 
 <aside class="sucess">
     The mobile number of the contact person who is to receive the goods at delivery time. This
