deploy: 57bf25242e396e7b6ab51240fa1b2c95f6ae273b

--- a/index.html
+++ b/index.html
@@ -1334,7 +1334,7 @@ For normal text, just type your paragraph on a single line</p>
 </blockquote>
 
 <p><code>java
-        Code snippet
+    # Code snippet
 </code></p>
 
 <p>Formatted Text
@@ -1342,42 +1342,18 @@ This text is <strong>bold</strong>, this is <em>italic</em>, this is an <code>in
 
 <aside class="notice">
     Here is my experiment.
-##Parameters
-
-I am going to list all the paraments required
-and a whole lot more of a paragraph
 
 </aside>
-
-<table><thead>
-<tr>
-<th>Parameter</th>
-<th>FieldType</th>
-<th>Required</th>
-<th>Case</th>
-<th>Example</th>
-</tr>
-</thead><tbody>
-<tr>
-<td>ReceiverEmail</td>
-<td>String</td>
-<td>No</td>
-<td>No</td>
-<td>DEREK@BOEING.COM</td>
-</tr>
-</tbody></table>
-
-<aside class="notice">
-    The mobile number of the contact person who is to receive the goods at delivery time. This
-information is beneficial as the receiver will receive status updates as to the progress of the goods
-whilst they are being routed through the BEX network.
-</aside>
-
-<p>InsuranceRequired | BOOLEAN | No  | No  | TRUE
-ReceiverMobile | String | No | No | 0823241234</p>
 
 <blockquote>
-<p>Need to display some information
+<p>Need to display some information line1
+Need to display some information line2
+Parameter | FieldType | Required | Case | Example
+--------- | --------- | -------- | ---- | ------- 
+ReceiverEmail      | String | No  | No  | DEREK@BOEING.COM
+InsuranceRequired | BOOLEAN | No  | No  | TRUE
+ReceiverMobile | String | No | No | 0823241234
+Need to display some information
 ReceiverEmail      | String | No  | No  | DEREK@BOEING.COM
 ReceiverMobile | String | No | No | 0823241234</p>
 </blockquote>
