deploy: 0277c9cf90c33418e688ebe71837fa170877616d

--- a/index.html
+++ b/index.html
@@ -1346,17 +1346,51 @@ This text is <strong>bold</strong>, this is <em>italic</em>, this is an <code>in
 </aside>
 
 <blockquote>
-<p>Need to display some information line1
-Need to display some information line2
-Parameter | FieldType | Required | Case | Example
---------- | --------- | -------- | ---- | ------- 
-ReceiverEmail      | String | No  | No  | DEREK@BOEING.COM
-InsuranceRequired | BOOLEAN | No  | No  | TRUE
-ReceiverMobile | String | No | No | 0823241234
-Need to display some information
-ReceiverEmail      | String | No  | No  | DEREK@BOEING.COM
-ReceiverMobile | String | No | No | 0823241234</p>
+<p>Need to display some information line1</p>
+
+<p>Need to display some information line2</p>
+
+<p>Need to display some information line3</p>
 </blockquote>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>FieldType</th>
+<th>Required</th>
+<th>Case</th>
+<th>Example</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>ReceiverEmail</td>
+<td>String</td>
+<td>No</td>
+<td>No</td>
+<td>DEREK@BOEING.COM</td>
+</tr>
+<tr>
+<td>InsuranceRequired</td>
+<td>BOOLEAN</td>
+<td>No</td>
+<td>No</td>
+<td>TRUE</td>
+</tr>
+<tr>
+<td>ReceiverMobile</td>
+<td>String</td>
+<td>No</td>
+<td>No</td>
+<td>0823241234</td>
+</tr>
+</tbody></table>
+
+<blockquote>
+<p>Need to display some information</p>
+</blockquote>
+
+<p>ReceiverEmail      | String | No  | No  | DEREK@BOEING.COM
+ReceiverMobile | String | No | No | 0823241234</p>
 <h1 id='errors'>Errors</h1>
 <aside class="notice">
 This error section is stored in a separate file in <code>includes/_errors.md</code>. Slate allows you to optionally separate out your docs into many files...just save them to the <code>includes</code> folder and add them to the top of your <code>index.md</code>'s frontmatter. Files are included in the order listed.
