deploy: cc6dfac84c41c683332cbc1a3293ab4c11acc1fe

--- a/index.html
+++ b/index.html
@@ -383,19 +383,13 @@ URL: <code>http://insight.bex.co.za/api/service/login?username=user123&amp;passw
 
 <blockquote>
 <p>Please note that all fields must be URL encoded if special characters are used</p>
-
-<ul>
-<li>All URL-based field values must be URL encoded if special characters are used*</li>
-</ul>
 </blockquote>
 
 <p><aside class="notice"></p>
 
 <blockquote>
-<ul>
-<li>All URL-based field values must be URL encoded if special characters are used*
-&lt;/aside</li>
-</ul>
+<p>All URL-based field values must be URL encoded if special characters are used
+&lt;/aside</p>
 </blockquote>
 
 <p>Example Service Call using JSON message body
