deploy: 78dccdcba6ab5c68513fb41037a569fce1ef4aa5

--- a/index.html
+++ b/index.html
@@ -383,10 +383,10 @@ The service supports URL parameters or JSON parameters in the message body</p>
 <li>URL: <code>http://insight.bex.co.za/api/service/login?username=user123&amp;password=pass1234</code></li>
 </ul>
 
-<p><aside class="notice">
-    All URL-based field values must be URL encoded if special characters are used</p>
+<aside class="notice">
+    All URL-based field values must be URL encoded if special characters are used
 
-<p>&lt;/aside</p>
+</aside>
 
 <p>Example Service Call using JSON message body</p>
 
